--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Home page</title>
 </head>
 <body>
-    
+    <h1>Tasty Tales</h1>
+    <a href="index.html">home</a>
+    <a href=".\pages\about.html">About</a>
+    <a href=".\pages\contact.html">Contact</a>
 </body>
 </html>
