--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>Tasty Tales</h1>
-    <a href="index.html">home</a>
-    <a href=".\pages\about.html">About</a>
-    <a href=".\pages\contact.html">Contact</a>
+    <a href="/index.html">home</a>
+    <a href="./pages/about.html">About</a>
+    <a href="./pages/contact.html">Contact</a>
 
     
 </body>
