--- a/pages/about.html
+++ b/pages/about.html
@@ -5,5 +5,8 @@
 </head>
 <body>
     <h1>About</h1>
+    <a href="/index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
 </body>
 </html>
