--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Contact Us</h1>
-    <a href=".\index.html">Home</a>
+    <a href="/index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
 </body>
