--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <a href="./pages/about.html">About</a>
     <a href="./pages/contact.html">Contact</a>
 
-    
+    <hr>
+    <br>
+    <p><b>Welcome to Tasty Tales</b></p>
+    <p>"Food is a powerful way to bring people together,<br>
+    sharing a meal transcends cultures and language,<br>
+    creating a common ground and strengthening bonds."</p>
 </body>
 </html>
