contact info added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,5 +8,19 @@
     <a href="/index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
+
+    <hr>
+    <br>
+     <p>📧 Email Us:
+        <a href="mailto:tastytales@gmail.com">
+            Click here to Mail us
+        </a>
+    </p>  
+    <p>📱 Call Us:
+        <a href="mob:9568500656">
+            Click here to Contact us
+        </a>
+    </p>
+    <br>  
 </body>
 </html>
