--- a/pages/about.html
+++ b/pages/about.html
@@ -4,9 +4,15 @@
     <title>About page</title>
 </head>
 <body>
-    <h1>About</h1>
+    <h1>About Tasty Tales HOtel</h1>
     <a href="/index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
+
+    <hr>
+    <br>
+    <p>welcome to <b>Tasty Tales</b> ,where every meal tells a story!</p>
+    <p>We believe that great food and warm hospitality create unforgettable experience.</p>
+    <p>Our hotel blends <b>traditional recipes</b> with <b>modern tastes,</b> offering a wide range of delicious cuisines made from the freshest ingredients.</p>
 </body>
 </html>
