--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <title>Contact Page</title>
 </head>
 <body>
-    <h1>Contact Us</h1>
+    <h1>📞Contact Us</h1>
     <a href="/index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
